--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="olynmpics">
+<html ng-app="olympics">
 <head>
     <meta charset="utf-8" />
     <title>Olympics</title>
