Adding sub-routes

--- a/client/sports/sports-nav.html
+++ b/client/sports/sports-nav.html
@@ -1,3 +1,7 @@
 <ul ng-controller="sportsController as sportsCtrl">
-    <li ng-repeat="sport in sportsCtrl.sports">{{ sport }}</li>
+    <li ng-repeat="sport in sportsCtrl.sports">
+        <a ui-sref="sports.medals">{{ sport }}</a>
+    </li>
 </ul>
+
+<div ui-view></div>
