--- a/client/sports/sports-nav.html
+++ b/client/sports/sports-nav.html
@@ -1,6 +1,6 @@
 <ul>
     <li ng-repeat="sport in sportsCtrl.sports">
-        <a ui-sref="sports.medals">{{ sport }}</a>
+        <a ui-sref="sports.medals({sportName: sport})">{{ sport }}</a>
     </li>
 </ul>
 
