--- a/client/index.html
+++ b/client/index.html
@@ -3,12 +3,25 @@
 <head>
     <meta charset="utf-8" />
     <title>Olympics</title>
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=Lato:400,700,300,400italic">
+    <link rel="stylesheet" href="styles/app.css">
+    <style>
+        [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak,
+        .x-ng-cloak {
+            display: none !important;
+        }
+    </style>
 </head>
 <body>
-    <h1>Olympics</h1>
+    <div class="header">
+        <di class="cell">
+            <h1 class="logo">Olympics</h1>
+        </di>
+    </div>
 
-    <div ui-view></div>
-    
+    <div class="cell" ui-view></div>
+
     <script src="dist/bundle.js"></script>
 </body>
 </html>
