--- a/client/sports/new-medal.html
+++ b/client/sports/new-medal.html
@@ -1,5 +1,5 @@
 <form class="form" name="newMedalForm" />
-    <h3 class="mbm">New Medal for </h3>
+    <h3 class="mbm">New Medal for {{sportName}} </h3>
     <div class="form-field">
         <label for="division" class="form-label">Division:</label>
         <input class="form-input" id="division" required />
@@ -11,7 +11,7 @@
     <div class="form-field">
         <label for="year" class="form-label">Year:</label>
         <select id="year" class="form-select" required>
-            <option value="2012"></option>
-            <option value="2016"></option>
+            <option value="2012">2012</option>
+            <option value="2016">2016</option>
         </select>
     </div>
