Appending controller name

--- a/client/sports/new-medal.html
+++ b/client/sports/new-medal.html
@@ -1,5 +1,5 @@
 <form class="form" name="newMedalForm" />
-    <h3 class="mbm">New Medal for {{sportName}} </h3>
+    <h3 class="mbm">New Medal for {{newMedalCtrl.sportName}} </h3>
     <div class="form-field">
         <label for="division" class="form-label">Division:</label>
         <input class="form-input" id="division" required />
