--- a/client/sports/sports-nav.html
+++ b/client/sports/sports-nav.html
@@ -1,7 +1,7 @@
 <div class="cell">
     <div class="sports-list">
         <ul class="grid list list--unstyled mbl" ng-cloak>
-            <li class="grid-box grid-box--60f12 sport-name" ng-repeat="sport in sportsCtrl.sports">
+            <li class="grid-box grid-box--6of12 sport-name" ng-repeat="sport in sportsCtrl.sports">
                 <div class="card">
                     <h2 class="card-title">
                         <a class="card-link card-link--{{ sport.toLowerCase() }}"
