--- a/client/sports/new-medal.html
+++ b/client/sports/new-medal.html
@@ -1,4 +1,4 @@
-<form class="form" name="newMedalForm" />
+<form class="form" name="newMedalForm">
     <h3 class="mbm">New Medal for {{newMedalCtrl.sportName}} </h3>
     <div class="form-field">
         <label for="division" class="form-label">Division:</label>
@@ -15,3 +15,6 @@
             <option value="2016">2016</option>
         </select>
     </div>
+
+    <input class="btn" type="submit" value="Submit" />
+</form>
