--- a/client/sports/new-medal.html
+++ b/client/sports/new-medal.html
@@ -1,16 +1,19 @@
-<form class="form" name="newMedalForm">
+<form class="form" name="newMedalForm" ng-submit="newMedalCtrl.saveMedal(medal)">
     <h3 class="mbm">New Medal for {{newMedalCtrl.sportName}} </h3>
     <div class="form-field">
         <label for="division" class="form-label">Division:</label>
-        <input class="form-input" id="division" required />
+        <input class="form-input" id="division" required 
+            ng-model="medal.division"/>
     </div>
     <div class="form-field">
         <label for="country" class="form-label">Country:</label>
-        <input class="form-input" id="country" required />
+        <input class="form-input" id="country" required 
+            ng-model="medal.country"/>
     </div>
     <div class="form-field">
         <label for="year" class="form-label">Year:</label>
-        <select id="year" class="form-select" required>
+        <select id="year" class="form-select" required
+            ng-model="medal.year">
             <option value="2012">2012</option>
             <option value="2016">2016</option>
         </select>
